feat: switch to pure gevent worker and enable Engine.IO logging for WebSocket diagnostics

--- a/core/state_management/Dockerfile
+++ b/core/state_management/Dockerfile
@@ -33,4 +33,5 @@ ENV FLASK_APP=state_management_main.py
 
 # 啟動命令（使用 gunicorn + gevent worker 支援 WebSocket）
 # 注意：eventlet 與 pymongo 不兼容，必須使用 gevent
-CMD ["gunicorn", "-k", "geventwebsocket.gunicorn.workers.GeventWebSocketWorker", "--bind", "0.0.0.0:55103", "--workers", "1", "--timeout", "120", "--access-logfile", "-", "--error-logfile", "-", "state_management_main:app"]
+# 使用純 gevent worker，Flask-SocketIO 會自動處理 WebSocket 升級
+CMD ["gunicorn", "-k", "gevent", "--bind", "0.0.0.0:55103", "--workers", "1", "--timeout", "120", "--access-logfile", "-", "--error-logfile", "-", "state_management_main:app"]
