feat: add analysis service configuration to Docker Compose and environment example

--- a/.env.example
+++ b/.env.example
@@ -102,3 +102,9 @@ UPLOAD_FOLDER=uploads
 EDGE_SERVER_URL=http://127.0.0.1:5000
 EDGE_TEMP_WAV_DIR=temp_wav
 EDGE_DEVICE_CONFIG_PATH=device_config.json
+
+############################
+# Analysis Service Settings
+############################
+ANALYSIS_NODE_ID=
+ANALYSIS_LOG_LEVEL=INFO
