feat: 增強錄音指令的數據驗證，更新設備配置以提高音質和記錄管理

--- a/sub_system/edge_client/device_config.json
+++ b/sub_system/edge_client/device_config.json
@@ -20,8 +20,8 @@
   "audio_config": {
     "default_device_index": 0,
     "channels": 1,
-    "sample_rate": 16000,
-    "bit_depth": 32
+    "sample_rate": 44100,
+    "bit_depth": 16
   },
   "logging_config": {
     "enabled": true,
@@ -31,6 +31,8 @@
     "max_bytes": 10485760,
     "backup_count": 100,
     "compress_backup": true,
+    "max_total_size_gb": 20.0,
+    "cleanup_threshold_percent": 90.0,
     "console_output": true,
     "console_level": "INFO"
   },
