feat: Add application title and version configuration for improved branding

--- a/.env.example
+++ b/.env.example
@@ -108,3 +108,10 @@ EDGE_DEVICE_CONFIG_PATH=device_config.json
 ############################
 ANALYSIS_NODE_ID=
 ANALYSIS_LOG_LEVEL=INFO
+
+############################
+# Application Title & Version
+############################
+APP_TITLE=狀態管理系統
+APP_VERSION=1.0.0
+SERVICE_NAME=State Management Service
