--- a/requirements.txt
+++ b/requirements.txt
@@ -36,6 +36,7 @@ sounddevice>=0.4.6
 matplotlib>=3.7.0
 seaborn>=0.13.0
 scikit-learn>=1.3.0
+nptdms>=1.7.0           # TDMS file support
 
 # ML/analysis stack
 # torch>=2.0.0
